Add label support to the data-pvc
Longhorn uses labels to find volumes to backup, plus having labels makes sense anyway
Add values field for data-dir labels
Add data-pvc labels field to README
Bump Chart version number to 2.0.2

--- a/charts/factorio-server-charts/templates/datadir-pvc.yaml
+++ b/charts/factorio-server-charts/templates/datadir-pvc.yaml
@@ -6,6 +6,9 @@ metadata:
   name: {{ template "factorio-server-charts.fullname" . }}-datadir
   labels:
     app: "{{ template "factorio-server-charts.fullname" . }}-{{ .Chart.Version }}"
+    {{- if .Values.persistence.labels }}
+    {{ toYaml .Values.persistence.labels | indent 4 }}
+    {{- end }}
 {{- if .Values.persistence.annotations }}
   annotations:
 {{ toYaml .Values.persistence.annotations | indent 4 }}
