--- a/charts/factorio-server-charts/templates/deployment.yaml
+++ b/charts/factorio-server-charts/templates/deployment.yaml
@@ -143,7 +143,7 @@ spec:
         - name: factorio
           containerPort: 34197
           protocol: UDP
-        - containerPort: {{ .Values.factorioServer.rcon_port | quote }}
+        - containerPort: {{ .Values.factorioServer.rcon_port }}
           protocol: TCP
         resources:
 {{ toYaml .Values.resources | indent 10 }}
