--- a/charts/factorio-server-charts/templates/datadir-pvc.yaml
+++ b/charts/factorio-server-charts/templates/datadir-pvc.yaml
@@ -6,6 +6,9 @@ metadata:
   name: {{ template "factorio-server-charts.fullname" . }}-datadir
   labels:
     app: "{{ template "factorio-server-charts.fullname" . }}-{{ .Chart.Version }}"
+    {{- range $key, $val := .Values.persistence.labels }}
+    {{ $key }}: {{ $val | quote }}
+    {{- end}}
 {{- if .Values.persistence.annotations }}
   annotations:
 {{ toYaml .Values.persistence.annotations | indent 4 }}
