--- a/charts/factorio-server-charts/templates/rcon-api-service.yaml
+++ b/charts/factorio-server-charts/templates/rcon-api-service.yaml
@@ -13,6 +13,16 @@ metadata:
     {{ $key }}: {{ $value | quote }}
   {{- end }}
 spec:
+  {{- if semverCompare ">=1.20.0-0" .Capabilities.KubeVersion.Version -}}
+  {{- if .Values.controller.service.ipFamilyPolicy }}
+    ipFamilyPolicy: {{ .Values.controller.service.ipFamilyPolicy }}
+  {{- end }}
+  {{- end }}
+  {{- if semverCompare ">=1.20.0-0" .Capabilities.KubeVersion.Version -}}
+  {{- if .Values.controller.service.ipFamilies }}
+    ipFamilies: {{ toYaml .Values.controller.service.ipFamilies | nindent 4 }}
+  {{- end }}
+  {{- end }}
   type: {{ .Values.rconAPI.type }}
   ports:
     - name: http
