--- a/charts/factorio-server-charts/templates/service.yaml
+++ b/charts/factorio-server-charts/templates/service.yaml
@@ -14,6 +14,16 @@ metadata:
   {{- end }}
   {{- end }}
 spec:
+  {{- if semverCompare ">=1.20.0-0" .Capabilities.KubeVersion.Version -}}
+  {{- if .Values.controller.service.ipFamilyPolicy }}
+    ipFamilyPolicy: {{ .Values.controller.service.ipFamilyPolicy }}
+  {{- end }}
+  {{- end }}
+  {{- if semverCompare ">=1.20.0-0" .Capabilities.KubeVersion.Version -}}
+  {{- if .Values.controller.service.ipFamilies }}
+    ipFamilies: {{ toYaml .Values.controller.service.ipFamilies | nindent 4 }}
+  {{- end }}
+  {{- end }}
   type: {{ .Values.service.type }}
   {{- if .Values.service.externalTrafficPolicy}}
   externalTrafficPolicy: {{ .Values.service.externalTrafficPolicy }}
