--- a/charts/factorio-server-charts/templates/service.yaml
+++ b/charts/factorio-server-charts/templates/service.yaml
@@ -15,13 +15,13 @@ metadata:
   {{- end }}
 spec:
   {{- if semverCompare ">=1.20.0-0" .Capabilities.KubeVersion.Version -}}
-  {{- if .Values.controller.service.ipFamilyPolicy }}
-  ipFamilyPolicy: {{ .Values.controller.service.ipFamilyPolicy }}
+  {{- if .Values.service.ipFamilyPolicy }}
+  ipFamilyPolicy: {{ .Values.service.ipFamilyPolicy }}
   {{- end }}
   {{- end }}
   {{- if semverCompare ">=1.20.0-0" .Capabilities.KubeVersion.Version -}}
-  {{- if .Values.controller.service.ipFamilies }}
-  ipFamilies: {{ toYaml .Values.controller.service.ipFamilies | nindent 4 }}
+  {{- if .Values.service.ipFamilies }}
+  ipFamilies: {{ toYaml .Values.service.ipFamilies | nindent 4 }}
   {{- end }}
   {{- end }}
   type: {{ .Values.service.type }}
