--- a/charts/factorio-server-charts/templates/deployment.yaml
+++ b/charts/factorio-server-charts/templates/deployment.yaml
@@ -60,7 +60,7 @@ spec:
               chmod -vR 777 /factorio/configs
               ls -alth /factorio
           {{- with .Values.podSecurityContext }}
-          podSecurityContext:
+          securityContext:
             {{- toYaml . | nindent 12 }}
           {{- end }}
           volumeMounts:
@@ -91,7 +91,7 @@ spec:
               mkdir -p /factorio/mods
               bash /scripts/mod-downloader.sh
           {{- with .Values.podSecurityContext }}
-          podSecurityContext:
+          securityContext:
             {{- toYaml . | nindent 12 }}
           {{- end }}
           volumeMounts:
@@ -114,7 +114,7 @@ spec:
             - |
               bash /scripts/save-importer.sh
           {{- with .Values.podSecurityContext }}
-          podSecurityContext:
+          securityContext:
             {{- toYaml . | nindent 12 }}
           {{- end }}
           volumeMounts:
@@ -128,7 +128,7 @@ spec:
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         {{- with .Values.podSecurityContext }}
-        podSecurityContext:
+        securityContext:
           {{- toYaml . | nindent 10 }}
         {{- end }}
         livenessProbe:
@@ -214,7 +214,7 @@ spec:
         image: "{{ .Values.port_fixer.image.repository }}:{{ .Values.port_fixer.image.tag }}"
         imagePullPolicy: {{ .Values.port_fixer.image.pullPolicy }}
         {{- with .Values.podSecurityContext }}
-        podSecurityContext:
+        securityContext:
           {{- toYaml . | nindent 10 }}
         {{- end }}
         command: ["/factorio-port-fixer"]
