adding chart releaser flow

--- a/.github/workflows/oci_releaser.yaml
+++ b/.github/workflows/oci_releaser.yaml
@@ -33,6 +33,6 @@ jobs:
           tag: $CHART_VERSION
           path: charts/factorio-server-charts # Default charts/{name}
           registry: ghcr.io
-          registry_username: ${{ secrets.REGISTRY_USERNAME }}
-          registry_password: ${{ secrets.REGISTRY_PASSWORD }}
+          registry_username: ${{ github.actor }}
+          registry_password: ${{ secrets.GITHUB_TOKEN }}
           update_dependencies: 'true' # Defaults to false
