feat: add support for custom sidecar containers
Allows additional containers to be run in the same pod as the Factorio
server.

--- a/charts/factorio-server-charts/templates/deployment.yaml
+++ b/charts/factorio-server-charts/templates/deployment.yaml
@@ -252,6 +252,9 @@ spec:
         - pingpong3.factorio.com
         - pingpong4.factorio.com
 {{- end }}
+{{- if .Values.additionalContainers }}
+{{ toYaml .Values.additionalContainers | indent 6 }}
+{{- end }}
 {{- if .Values.nodeSelector }}
       nodeSelector:
 {{ toYaml .Values.nodeSelector | indent 8 }}
